# study-to-think

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  test_crud.db  vcpkg.json
.devcontainer/: devcontainer.json
.github/workflows/: cmake.yml
Object_oriented_diagrams/: Class_diagram.vsdx  Collaboration_diagram.vsdx  Use_case.vsdx  activity_diagram.vsdx  sequence_diagram.vsdx  state_diagram.vsdx
diagrams/: DFD_Context_Diagram  Untitled Diagram.drawio  inherit_example.drawio  stt_use_case.drawio
diagrams/DFD/: DFD_Context_Diagram  Level 0 diagram.drawio
diagrams/DFD/Level_0/: Level 0 diagram.drawio
diagrams/ER/: ER.vsdx
report/develop and feasibility/Conceive/: 课程考核系统.docx  课程考核系统（魔改）.docx
study-to-think/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.ui  attendancescoredialog.cpp  attendancescoredialog.h  attendancescoredialog.ui  cli_main.cpp  cli_main.h  cli_utils.cpp  cli_utils.h  csv_io.h  db_access.cpp  db_access.h  grading_scheme.cpp  grading_scheme.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  manualscoredialog.cpp  manualscoredialog.h  manualscoredialog.ui  qt_defs.h  qt_main.cpp  stat_utils.cpp  stat_utils.h  stt.ts  stt_config.h.in  student.cpp  student.h  total_grade.cpp  total_grade.h
study-to-think/imgs/: icon.png.bak  icon.png.bak2
tests/: CMakeLists.txt  show.db  test.db  test1.cpp  test_attendance.cpp  test_crud.db  test_csv.cpp  test_grade_utils.cpp
